<resources>
    <string name="app_name">VICTOR</string>
    <string name="ip_dialog_title">&#129504; VICTOR\'s brain IP address &#129504;</string>
    <string name="ip_hint">Server IPv4 address</string>
    <string name="port_hint">Server port</string>
    <string name="tell_prophecy">Tell image caption prophecy !</string>
    <string name="app_name_extended">Visual Image Captioning Telling ORacle</string>
    <string name="victor_image">VICTOR image</string>
    <string name="victor_says">VICTOR thinks image says</string>
    <string name="photo_image">Photo taken to produce capture</string>
    <string name="thinking">Prophesying caption</string>
    <string name="sorry">I\'m sorry. Brain on break.\nTry again later !</string>
</resources>