<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/oracle_main_iv"
        android:layout_width="295dp"
        android:layout_height="441dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/victor_image"
        android:src="@drawable/oracle"
        app:layout_constraintBottom_toTopOf="@+id/tell_me_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_main_tv"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/tell_me_btn"
        android:layout_width="277dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/cookie"
        android:onClick="startProphecyProcess"
        android:text="@string/tell_prophecy"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_name_main_tv"
        android:layout_width="310dp"
        android:layout_height="89dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:gravity="center"
        android:text="@string/app_name_extended"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/victor_main_tv"
        tools:text="@string/app_name_extended" />

    <TextView
        android:id="@+id/victor_main_tv"
        android:layout_width="309dp"
        android:layout_height="105dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="1dp"
        android:background="#000000"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="86sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_name_main_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>